--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@walletconnect/web3-provider": "^1.7.8",
 		"axios": "^0.26.1",
 		"ethers": "^5.6.2",
+		"keccak256": "^1.0.6",
+		"merkletreejs": "^0.2.31",
 		"next": "12.0.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
